--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,30 @@ server.port=8081
 
 logging.level.org.springframework=debug
 
+# Swagger
+# Disabling the /v3/api-docs endpoint
+springdoc.api-docs.enabled=true
+# Disabling the swagger-ui
+springdoc.swagger-ui.enabled=true
+springdoc.show-login-endpoint=true
+springdoc.show-actuator=true
+
+springdoc.packagesToScan=com.caad.app.controller, com.caad.app.api
+springdoc.pathsToMatch=/api/v3/**
+
+#Paths por defecto para utilizar en CustomAutho...
+#api.basePath=/api/v3
+#api.loginPath=/token/login
+#api.refreshTokenPath=/token/refresh
+#Clave para JWT
+#jwt.secret = pruebaClaveSecreta
+
+#api.defaultuser.username=admin
+#api.defaultuser.password=admin
+#api.defaultuser.name=Admin
+#api.defaultuser.lastName=User
+#api.defaultuser.email=adm@demo.com
+
 
 
 
